Changes since version 3.2.0
---------------------------     

- Fixed bugs in stringToProxy and propertyToProxy that reported a
  "NullHandleException".

Changes since version 3.1.1
---------------------------     

- Ice for Ruby is now compatible with ruby 1.8.1.

- Fixed a bug in Application::holdInterrupt.

- Fixed a bug that would cause the extension to abort if a GC occurred
  after the communicator was destroyed.

- Fixed a code-generation bug that occurred when the name of a data
  member begins with an uppercase letter.

- Changed the mapping of sequence<byte> for performance reasons:

  - A string is now accepted as a legal value when sequence<byte> is
    expected. An array of integers is also accepted, but the Ice run
    time validates every element of the array to ensure it is in the
    proper range, therefore using an array is much slower than using
    a string.

  - A sequence<byte> value is now always received as a string.

- Added the property Ice.Default.EndpointSelection. If not defined,
  the default value is "Random".

- Proxies can now be configured to use thread-per-connection.

- Added Communicator::isShutdown() to allow applications to determine
  whether a communicator has been shutdown.

- Added a per-process logger and two methods to get/set the logger,
  Ice.Util.getProcessLogger() and Ice.Util.setProcessLogger(). Calling
  getProcessLogger() creates a default logger if setProcessLogger()
  has not been called. The process logger is also used as the default
  logger for all communicators that do not have a logger explicitly
  set.

- Added support for a user-defined signal handler in Ice::Application.
  A subclass must override the interruptCallback method and invoke
  callbackOnInterrupt to activate it.

- Message batches are now automatically flushed when the total size of
  the batch reaches the message size maximum. This feature can be
  controlled using the Ice.BatchAutoFlush property, which is on by
  default.
